--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
 rvm:
-- 2.1.0
+- 2.0.0
+
 branches:
   only:
   - develop
@@ -9,6 +10,7 @@ before_install:
 before_script:
 - git config --global user.name "Antonio Cabrera"
 - git config --global user.email "antonio.cabreraglz@gmail.com"
+- git clone --quiet --branch=master https://${GH_TOKEN}@github.com/antonio-cabreraglz/drunken-octo-sansa.git _site
 
 after_success:
 - bundle exec rake deploy
